kubernetes/apps/automation/n8n-postgresql/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: n8n-postgresql
  labels:
    app.kubernetes.io/name: n8n-postgresql
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: n8n-postgresql
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: postgresql
    - name: metrics
      port: 9399
      protocol: TCP
      targetPort: metrics
